--- a/CV/index.html
+++ b/CV/index.html
@@ -25,7 +25,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- header -->
 <div class="col-sm-3 col-md-2 sidebar">
 		 <div class="sidebar_top">
-			 <h1>赵晓韵</h1>
+			 <h1>Xiaoyun，Zhao</h1>
 			 <img src="images/wechat.png" alt=""/>
 		 </div>
 		<div class="details">
